$Id$

2009-07-07  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* gdbmi.py: Fix content of gdbmi results within quotes must be
	unquoted.
	* misc.py: Fix quoted command line arguments are not properly parsed.
	* vim.py: Replace the `vimcmd` environment variable with the
	`EDITOR` environment variable.
	* vim.py gdb.py debugger.py: Jobs and their scheduling time are queued
	in an heap queue, and processed by the dispatch loop.
	* debugger.py gdb.py simple.py: Remove the following methods from the
	netbeans api and the Debugger class: cmd_dbgvar, cmd_delvar,
	cmd_sigint and cmd_symcompletion.
	* buffer.py gdb.py misc.py netbeans.py vim.py: Replace assert with
	exceptions in BufferSet.
	* all files: Clean up the python debugger interface and use pydoc to
	document it.
	* setup.py: The Fedora Core 9 distribution is missing the Python
	standard library test.regrtest module.
	* pyclewn_install.py: Change gdb Windows pathname in shortcut.

===============================================================================
2009-04-04  Xavier de Gaye <xdegaye at users dot sourceforge dot net>

	* setup.py: Fix test suite does not run with python2.6. Test suite
	is now run through setup.py.
	* misc.py misc_posix.py: Fixed wrong argument in the invocation of
	execvp in ProcessChannel.
	* misc.py gdb.py gdbmi.py: Ignore gdb/mi log stream records.
	* simple.py: The symcompletion and sigint commands assert when run in
	simple.
	* netbeans.py application.py: Print an error message when a pyclewn
	command is issued on a [NoName] buffer. When the command is issued on
	a buffer loaded from Vim command line, prompt the user to allow the
	processing of netbeans messages in the Vim idle loop (this is required
	after the fix in Vim 7.2: netbeans events are handled while updating
	the screen, causing a crash)
	* netbeans.py: Fix incorrect display after the Vim command bdelete or
	bwipeout on the clewn console.
	* misc.py gdb.py netbeans.py application.py dispatcher.py: Use